# grafodb

./: docker-compose.yaml
grafo/: BUILD.bazel  client.go  cluster.go  data.go
internal/bootstrap/: BUILD.bazel  client.go  server.go
internal/bootstrap/cmd/: BUILD.bazel  cluster.go  flags.go  schema.go  server.go  util.go
internal/cluster/: BUILD.bazel  cluster.go
internal/director/: BUILD.bazel  director.go
internal/graph/: BUILD.bazel  graph.go
internal/graph/store/: BUILD.bazel  bagder.go  store.go
internal/rpc/: BUILD.bazel  codec.go  factory.go  protocol.fbs  protocol_generated.go  rpc.pb.go  rpc.proto
internal/server/: BUILD.bazel  grpc.go  http.go  server.go
internal/server/handler/: BUILD.bazel  cluster.go  handler.go
internal/server/middleware/: BUILD.bazel  grpc.go  middleware.go
