load("@io_bazel_rules_go//go:def.bzl", "go_library")

#gazelle:proto disable

go_library(
    name = "go_default_library",
    srcs = [
        "codec.go",
        "protocol_generated.go",
        "rpc.pb.go",
    ],
    importpath = "github.com/grafodb/grafodb/internal/rpc",
    visibility = ["//:__subpackages__"],
    deps = [
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
        "//vendor/github.com/google/flatbuffers/go",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)
