load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bagder.go",
        "store.go",
    ],
    importpath = "github.com/grafodb/grafodb/internal/graph/store",
    visibility = ["//:__subpackages__"],
    deps = ["//vendor/github.com/rs/zerolog:go_default_library"],
)
